--- a/Email HTML/signature.html
+++ b/Email HTML/signature.html
@@ -3,11 +3,10 @@
     <strong>Benjamin Richards</strong><br>
     Layout Designer / Engineer<br>
     <a href="mailto:benjamin.richards@exlterra.com">benjamin.richards@exlterra.com</a></p>
-    
-    <p><img src="file:///C:/Users/Exlterra%20CAD%2002/Downloads/exlterraLogoEmail.png" alt="Exlterra Logo" width="200">
-    </p>
-    
-    <p>618 East Ten Mile Road<br>
+
+<p><img src="https://solarimpulse.com/files/companies/logo/2017-11-10-083045/Exlterra.png" alt="Exlterra Logo" width="200"></p>
+
+<p>618 East Ten Mile Road<br>
     Hazel Park, MI 48030, USA<br>
     Office +1 (248) 268-2336<br>
     <a href="http://www.exlterra.com">www.exlterra.com</a></p>
