--- a/Email HTML/signature.html
+++ b/Email HTML/signature.html
@@ -1,12 +1,17 @@
 <p><br>Sincerely,<br>
     <br>
     <strong>Benjamin Richards</strong><br>
-    Layout Designer / Engineer<br>
+    Layout Designer | Software Engineer<br>
+    B.S. Computer Information Science, UofM - Dearborn <br>
     <a href="mailto:benjamin.richards@exlterra.com">benjamin.richards@exlterra.com</a></p>
-
-<p><img src="https://solarimpulse.com/files/companies/logo/2017-11-10-083045/Exlterra.png" alt="Exlterra Logo" width="200"></p>
-
-<p>618 East Ten Mile Road<br>
+    
+    <p><img src="file:///C:/Users/Exlterra%20CAD%2002/Downloads/exlterraLogoEmail.png" alt="Exlterra Logo" width="200">
+    </p>
+    
+    <p>618 East Ten Mile Road<br>
     Hazel Park, MI 48030, USA<br>
     Office +1 (248) 268-2336<br>
     <a href="http://www.exlterra.com">www.exlterra.com</a></p>
+    <p style="font-size: 12px;" wordwrap;>
+    This electronic message and all of its contents and attachments contain information from Exlterra. which may be privileged, confidential or otherwise protected from disclosure.  The information is intended to be for the addressee only.  If you are not the addressee, then any disclosure, copying, distribution or use of this message, or its contents or any of its attachments, is prohibited.  If you have received this electronic message in error, please notify us immediately and destroy the original message and all copies.
+    </p>
