--- a/Email HTML/signature.html
+++ b/Email HTML/signature.html
@@ -1,7 +1,7 @@
 <p><br>Sincerely,<br>
     <br>
     <strong>Benjamin Richards</strong><br>
-    Layout Designer / Engineer<br>
+    Layout Designer / Software Engineer<br>
     <a href="mailto:benjamin.richards@exlterra.com">benjamin.richards@exlterra.com</a></p>
 
 <p><img src="https://solarimpulse.com/files/companies/logo/2017-11-10-083045/Exlterra.png" alt="Exlterra Logo" width="200"></p>
